# order-risk-platform

./: .gitignore  README.md  pyproject.toml  test_sdk.py  test_sdk_import.py
api/: auth.py  dependencies.py  schemas.py
app/: app.py
core/: enums.py  logger.py
ml/: predictor.py
models/: X_test.joblib  feature_names.joblib  scaler.joblib  y_test.joblib
notebooks/: fraud_detection.ipynb  load_data.ipynb  test_saved_model.py
order_risk_sdk/: __init__.py  client.py  config.py  exceptions.py
order_risk_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
risk_rule_engine/: models.py
risk_rule_engine/json_samples/: high_risk_order.json
services/: scoring.py
src/: README.md  app.py  auth.py  cli.py  config.py  dependencies.py  enums.py  model_check.py  models.py  predictor.py  preprocessing.py  rules.py  schemas.py  scorer.py  scorer_check.py  scorer_test.py
src/json_samples/: low_risk_order.json  medium_risk_order.json
storefront/: app.py  config.py
storefront/routes/: main.py
storefront/services/: order_builder.py  risk_service.py
storefront/static/css/: style.css
storefront/templates/: index.html
tests/: conftest.py  test_batch.py  test_batch_sdk.py  test_data.py  test_score.py
