[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "order-risk-sdk"
version = "0.1.0"
description = "Python SDK for the Order Risk API"
readme = "README.md"
requires-python = ">=3.11"

authors = [
    { name = "Bhavdeep Kaur" }
]

license = { text = "MIT" }

keywords = [
    "machine-learning",
    "fraud-detection",
    "sdk",
    "fastapi"
]

dependencies = [
    "requests>=2.31.0"
]

[tool.setuptools.packages.find]
include = ["order_risk_sdk*"]